--- a/templates/Pages/Left and Right Side Columns.hbs
+++ b/templates/Pages/Left and Right Side Columns.hbs
@@ -30,14 +30,14 @@ ft.theme.ready();
 
 <header class="ft-header">
   <nav class="ft-navbar navbar d-flex flex-column flex-md-row border-bottom">
-    <button type="button" class="ft-main-left-toggle btn btn-light rounded-0 order-0">
+    <button type="button" class="ft-main-left-toggle btn btn-light rounded-0 order-0" data-toggle="ft-main-left">
       <span class="fa fa-layout-nav-left" aria-hidden="true"></span>
     </button>
     #TOP_GLOBAL_NAVIGATION_LIST#
 		<a class="navbar-brand order-1 order-lg-0" href="#HOME_LINK#">#LOGO#</a>
     <nav class="navbar-expand flex-row d-flex ml-md-auto order-3 order-lg-2">
       #NAVIGATION_BAR#
-	    <button type="button" class="ft-main-right-toggle btn btn-light rounded-0 order-4">
+	    <button type="button" class="ft-main-right-toggle btn btn-light rounded-0 order-4" data-toggle="ft-main-right">
 	      <span class="fa fa-layout-nav-right" aria-hidden="true"></span>
 	    </button>
     </nav>
@@ -47,7 +47,7 @@ ft.theme.ready();
 <main class="ft-main">
   <div class="ft-main-header">#REGION_POSITION_02#</div>
 
-  <div class="ft-main-left border-right py-3 col-12 col-sm-3 col-lg-2">
+  <div class="ft-main-left open border-right py-3 col-12 col-sm-3 col-lg-2">
     <div class="ft-main-left-container">#SIDE_GLOBAL_NAVIGATION_LIST##REGION_POSITION_03#</div>
   </div>
 
@@ -76,7 +76,7 @@ ft.theme.ready();
     </footer>
   </div>
 
-  <div class="ft-main-right border-left py-3 col-12 col-sm-3 col-lg-2">
+  <div class="ft-main-right open border-left py-3 col-12 col-sm-3 col-lg-2">
     <div class="ft-main-right-container">#REGION_POSITION_05#</div>
 </main>
 
