--- a/templates/Pages/Left and Right Side Columns.hbs
+++ b/templates/Pages/Left and Right Side Columns.hbs
@@ -47,11 +47,11 @@ ft.theme.ready();
 <main class="ft-main">
   <div class="ft-main-header">#REGION_POSITION_02#</div>
 
-  <div class="ft-main-left open border-right py-3 col-12 col-sm-3 col-lg-2">
+  <div class="ft-main-left open border-right py-3 col">
     <div class="ft-main-left-container">#SIDE_GLOBAL_NAVIGATION_LIST##REGION_POSITION_03#</div>
   </div>
 
-  <div class="ft-main-center">
+  <div class="ft-main-center ft-main-left-open ft-main-right-open">
     <div class="ft-breadcrumb">#REGION_POSITION_04#</div>
     <div class="ft-main-center-container">
       <div class="ft-body py-3">
@@ -76,7 +76,7 @@ ft.theme.ready();
     </footer>
   </div>
 
-  <div class="ft-main-right open border-left py-3 col-12 col-sm-3 col-lg-2">
+  <div class="ft-main-right open border-left py-3 col">
     <div class="ft-main-right-container">#REGION_POSITION_05#</div>
 </main>
 
