--- a/src/scss/_ft_components.scss
+++ b/src/scss/_ft_components.scss
@@ -3,6 +3,7 @@
 @import "apex_components/breadcrumb";
 @import "apex_components/buttons";
 @import "apex_components/cards";
+@import "apex_components/dev";
 @import "apex_components/dropdowns";
 @import "apex_components/footer";
 @import "apex_components/forms";
