general page & field stuff

--- a/src/scss/apex_components/_general.scss
+++ b/src/scss/apex_components/_general.scss
@@ -48,6 +48,11 @@ body > form {
 	}
 }
 
+.ft-main-center .ft-body .ft-region {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
 .ft-region-left,
 .ft-region-right {
 	&:empty {
