--- a/templates/Fields/Standard.hbs
+++ b/templates/Fields/Standard.hbs
@@ -2,24 +2,34 @@
 {{#BEFORE_LABEL}}{{/BEFORE_LABEL}}
 {{#AFTER_LABEL}}{{/AFTER_LABEL}}
 {{#BEFORE_ITEM}}
-<div class="form-group #ITEM_CSS_CLASSES#">
+<div class="ft-field-container #ITEM_CSS_CLASSES#" id="#CURRENT_ITEM_CONTAINER_ID#">
 {{/BEFORE_ITEM}}
 {{#AFTER_ITEM}}
 </div>
-
 {{/AFTER_ITEM}}
 {{#AFTER_LABEL_AND_ITEM}}{{/AFTER_LABEL_AND_ITEM}}
 
 {{#ON_ERROR_BEFORE_LABEL}}{{/ON_ERROR_BEFORE_LABEL}}
 {{#ON_ERROR_AFTER_LABEL}}{{/ON_ERROR_AFTER_LABEL}}
-{{#ERROR_TEMPLATE}}{{/ERROR_TEMPLATE}}
+{{#ERROR_TEMPLATE}}
+<span class="ft-field-error">#ERROR_MESSAGE#</span>
+{{/ERROR_TEMPLATE}}
 {{#HELP_TEMPLATE}}{{/HELP_TEMPLATE}}
 
 {{#TEMPLATE_OPTION_GROUPS}}
 []
 {{/TEMPLATE_OPTION_GROUPS}}
 {{#TEMPLATE_OPTIONS}}
-[]
+[
+  {
+    "NAME": "FIELD_LEAD",
+    "DISPLAY_NAME": "Stand out",
+    "DISPLAY_SEQUENCE": 10,
+    "CSS_CLASSES": "lead",
+    "HELP_TEXT": "Make a field stand out.",
+    "IS_ADVANCED": "N"
+  }
+]
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
