--- a/templates/Pages/Left and Right Side Columns.hbs
+++ b/templates/Pages/Left and Right Side Columns.hbs
@@ -54,7 +54,7 @@ ft.theme.ready();
   <div class="ft-main-center ft-main-left-open ft-main-right-open">
     <div class="ft-breadcrumb">#REGION_POSITION_04#</div>
     <div class="ft-main-center-container">
-      <div class="ft-body py-3">
+      <div class="ft-body">
         <div class="ft-messages">#GLOBAL_NOTIFICATION##SUCCESS_MESSAGE##NOTIFICATION_MESSAGE#</div>
         #BODY#
       </div>
