refactored structure of field templates

--- a/templates/Fields/Image (Display image).hbs
+++ b/templates/Fields/Image (Display image).hbs
@@ -1,20 +1,26 @@
-{{#BEFORE_LABEL_AND_ITEM}}{{/BEFORE_LABEL_AND_ITEM}}
-{{#BEFORE_LABEL}}{{/BEFORE_LABEL}}
-{{#AFTER_LABEL}}{{/AFTER_LABEL}}
 {{#BEFORE_ITEM}}
 <figure class="figure ft-image #ITEM_CSS_CLASSES#">
 {{/BEFORE_ITEM}}
+{{#TEMPLATE_BODY1}}
+<label for="#CURRENT_ITEM_NAME#" id="#LABEL_ID#" class="hidden-xs-up">
+{{/TEMPLATE_BODY1}}
+{{#TEMPLATE_BODY2}}
+</label>
+{{/TEMPLATE_BODY2}}
+{{#ITEM_PRE_TEXT}}{{/ITEM_PRE_TEXT}}
+{{#BEFORE_ELEMENT}}{{/BEFORE_ELEMENT}}
+{{#AFTER_ELEMENT}}{{/AFTER_ELEMENT}}
+{{#ITEM_POST_TEXT}}{{/ITEM_POST_TEXT}}
 {{#AFTER_ITEM}}
 <figcaption class="figure-caption">#CURRENT_ITEM_HELP_TEXT#</figcaption>
 </figure>
-
 {{/AFTER_ITEM}}
-{{#AFTER_LABEL_AND_ITEM}}{{/AFTER_LABEL_AND_ITEM}}
 
 {{#ON_ERROR_BEFORE_LABEL}}{{/ON_ERROR_BEFORE_LABEL}}
 {{#ON_ERROR_AFTER_LABEL}}{{/ON_ERROR_AFTER_LABEL}}
 {{#ERROR_TEMPLATE}}{{/ERROR_TEMPLATE}}
-{{#HELP_TEMPLATE}}{{/HELP_TEMPLATE}}
+{{#HELP_LINK}}{{/HELP_LINK}}
+{{#INLINE_HELP_TEXT}}{{/INLINE_HELP_TEXT}}
 
 {{#TEMPLATE_OPTION_GROUPS}}
 []
