--- a/templates/Fields/Standard.hbs
+++ b/templates/Fields/Standard.hbs
@@ -1,20 +1,34 @@
-{{#BEFORE_LABEL_AND_ITEM}}{{/BEFORE_LABEL_AND_ITEM}}
-{{#BEFORE_LABEL}}{{/BEFORE_LABEL}}
-{{#AFTER_LABEL}}{{/AFTER_LABEL}}
 {{#BEFORE_ITEM}}
 <div class="ft-field-container #ITEM_CSS_CLASSES#" id="#CURRENT_ITEM_CONTAINER_ID#">
 {{/BEFORE_ITEM}}
+{{#TEMPLATE_BODY1}}
+<label for="#CURRENT_ITEM_NAME#" id="#LABEL_ID#" data-help="#HELP_TEMPLATE#">
+{{/TEMPLATE_BODY1}}
+{{#TEMPLATE_BODY2}}
+</label>
+{{/TEMPLATE_BODY2}}
+{{#ITEM_PRE_TEXT}}{{/ITEM_PRE_TEXT}}
+{{#BEFORE_ELEMENT}}
+<div class="">
+{{/BEFORE_ELEMENT}}
+{{#AFTER_ELEMENT}}
+</div>
+{{/AFTER_ELEMENT}}
+{{#ITEM_POST_TEXT}}{{/ITEM_POST_TEXT}}
 {{#AFTER_ITEM}}
 </div>
+
 {{/AFTER_ITEM}}
-{{#AFTER_LABEL_AND_ITEM}}{{/AFTER_LABEL_AND_ITEM}}
 
 {{#ON_ERROR_BEFORE_LABEL}}{{/ON_ERROR_BEFORE_LABEL}}
 {{#ON_ERROR_AFTER_LABEL}}{{/ON_ERROR_AFTER_LABEL}}
 {{#ERROR_TEMPLATE}}
 <span class="ft-field-error">#ERROR_MESSAGE#</span>
 {{/ERROR_TEMPLATE}}
-{{#HELP_TEMPLATE}}{{/HELP_TEMPLATE}}
+{{#HELP_LINK}}
+#CURRENT_ITEM_HELP_TEXT#
+{{/HELP_LINK}}
+{{#INLINE_HELP_TEXT}}{{/INLINE_HELP_TEXT}}
 
 {{#TEMPLATE_OPTION_GROUPS}}
 []
