--- a/templates/Fields/Label (Display only).hbs
+++ b/templates/Fields/Label (Display only).hbs
@@ -1,18 +1,29 @@
-{{#BEFORE_LABEL_AND_ITEM}}{{/BEFORE_LABEL_AND_ITEM}}
-{{#BEFORE_LABEL}}{{/BEFORE_LABEL}}
-{{#AFTER_LABEL}}{{/AFTER_LABEL}}
 {{#BEFORE_ITEM}}
 <div class="label-group #ITEM_CSS_CLASSES#">
 {{/BEFORE_ITEM}}
+{{#TEMPLATE_BODY1}}
+<label for="#CURRENT_ITEM_NAME#" id="#LABEL_ID#">
+{{/TEMPLATE_BODY1}}
+{{#TEMPLATE_BODY2}}
+</label>
+{{/TEMPLATE_BODY2}}
+{{#ITEM_PRE_TEXT}}{{/ITEM_PRE_TEXT}}
+{{#BEFORE_ELEMENT}}{{/BEFORE_ELEMENT}}
+{{#AFTER_ELEMENT}}
+#HELP_TEMPLATE#
+{{/AFTER_ELEMENT}}
+{{#ITEM_POST_TEXT}}{{/ITEM_POST_TEXT}}
 {{#AFTER_ITEM}}
 </div>
 {{/AFTER_ITEM}}
-{{#AFTER_LABEL_AND_ITEM}}{{/AFTER_LABEL_AND_ITEM}}
 
 {{#ON_ERROR_BEFORE_LABEL}}{{/ON_ERROR_BEFORE_LABEL}}
 {{#ON_ERROR_AFTER_LABEL}}{{/ON_ERROR_AFTER_LABEL}}
 {{#ERROR_TEMPLATE}}{{/ERROR_TEMPLATE}}
-{{#HELP_TEMPLATE}}{{/HELP_TEMPLATE}}
+{{#HELP_LINK}}
+<small class="text-muted">#CURRENT_ITEM_HELP_TEXT#</small>
+{{/HELP_LINK}}
+{{#INLINE_HELP_TEXT}}{{/INLINE_HELP_TEXT}}
 
 {{#TEMPLATE_OPTION_GROUPS}}
 []
