--- a/src/scss/apex_extends/_nav.scss
+++ b/src/scss/apex_extends/_nav.scss
@@ -9,3 +9,24 @@
 .ft-tab-fade .tab-pane {
 	@extend .fade;
 }
+
+// RDS
+.apex-rds {
+	&.apex-rds-container--jumpNav {
+		@extend .nav;
+		@extend .flex-column;
+
+		.apex-rds-item {
+			@extend .nav-item;
+
+			a {
+				@extend .nav-link;
+				@extend .text-muted;
+			}
+
+			&.apex-rds-selected a {
+				@extend .text-primary;
+			}
+		}
+	}
+}
