rds and nav collapse

--- a/src/scss/_ft_components.scss
+++ b/src/scss/_ft_components.scss
@@ -19,6 +19,7 @@
 @import "apex_components/navbar";
 @import "apex_components/page_templates";
 @import "apex_components/paginations";
+@import "apex_components/rds";
 @import "apex_components/tables";
 @import "apex_components/themeroller";
 @import "apex_components/typography";
