--- a/src/scss/_ft_extends.scss
+++ b/src/scss/_ft_extends.scss
@@ -1,5 +1,6 @@
 @import "apex_extends/media";
 @import "apex_extends/nav";
 @import "apex_extends/navbar";
+@import "apex_extends/rds";
 @import "apex_extends/table";
 @import "apex_extends/typography";
