--- a/templates/Pages/Left and Right Side Columns.hbs
+++ b/templates/Pages/Left and Right Side Columns.hbs
@@ -52,7 +52,7 @@ ft.theme.ready();
   </div>
 
   <div class="ft-main-center ft-main-left-open ft-main-right-open">
-    <div class="ft-breadcrumb">#REGION_POSITION_04#</div>
+    <div class="ft-breadcrumb border-bottom">#REGION_POSITION_04#</div>
     <div class="ft-main-center-container">
       <div class="ft-body">
         <div class="ft-messages">#GLOBAL_NOTIFICATION##SUCCESS_MESSAGE##NOTIFICATION_MESSAGE#</div>
