--- a/templates/Regions/Standard.hbs
+++ b/templates/Regions/Standard.hbs
@@ -15,7 +15,7 @@
 			<div class="ft-region-right">#EXPAND#</div>
 		</div>
 
-		<div class="ft-region-body t-Region-body">#BODY##SUB_REGIONS#</div>
+		<div class="ft-region-body t-Region-body">#BODY#<div class="ft-subregions">#SUB_REGIONS#</div></div>
 
 		<div class="ft-region-buttons d-flex flex-row justify-content-between">
 			<div class="ft-region-left">#CLOSE##HELP#</div>
