--- a/src/scss/apex_components/_breadcrumb.scss
+++ b/src/scss/apex_components/_breadcrumb.scss
@@ -2,6 +2,10 @@
 	position: fixed;
 	z-index: $zindex-fixed;
 	transition: width 0.3s;
+
+	&:empty {
+		border-bottom: none!important;
+	}
 }
 
 .breadcrumb {
