buttons and cleanup

--- a/templates/Pages/Left and Right Side Columns.hbs
+++ b/templates/Pages/Left and Right Side Columns.hbs
@@ -29,7 +29,7 @@ ft.theme.ready();
 #FORM_OPEN#
 
 <header class="ft-header">
-  <nav class="ft-navbar navbar d-flex flex-column flex-md-row border-bottom">
+  <nav class="ft-navbar navbar fixed-top d-flex flex-column flex-md-row border-bottom">
     <button type="button" class="ft-main-left-toggle btn btn-light rounded-0 order-0" data-toggle="ft-main-left">
       <span class="fa fa-layout-nav-left" aria-hidden="true"></span>
     </button>
@@ -193,30 +193,6 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
         "DISPLAY_NAME": "No Container",
         "DISPLAY_SEQUENCE": 3,
         "CSS_CLASSES": "ft-page-footer-container-none",
-        "HELP_TEXT": ""
-      }
-    ]
-  },
-  {
-    "NAME": "NAVBAR_PLACEMENT",
-    "DISPLAY_NAME": "Navigation Bar Placement",
-    "DISPLAY_SEQUENCE": 2,
-    "HELP_TEXT": "",
-    "NULL_TEXT": "Default",
-    "IS_ADVANCED": "N",
-    "TEMPLATE_OPTIONS": [
-      {
-        "NAME": "NAVBAR_PLACEMENT_FIXED_BOTTOM",
-        "DISPLAY_NAME": "Fixed Bottom",
-        "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "ft-navbar-fixed-bottom",
-        "HELP_TEXT": ""
-      },
-      {
-        "NAME": "NAVBAR_PLACEMENT_FIXED_TOP",
-        "DISPLAY_NAME": "Fixed Top",
-        "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "ft-navbar-fixed-top",
         "HELP_TEXT": ""
       }
     ]
