--- a/templates/Buttons/~global.template.options.hbs
+++ b/templates/Buttons/~global.template.options.hbs
@@ -1,5 +1,592 @@
 {{#TEMPLATE_OPTION_GROUPS}}
-[]
+[
+  {
+    "NAME": "BUTTON_STYLE",
+    "DISPLAY_NAME": "Style",
+    "DISPLAY_SEQUENCE": 100,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "",
+    "IS_ADVANCED": "N",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_STYLE_PRIMARY",
+        "DISPLAY_NAME": "Primary",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "btn-primary",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_PRIMARY_OUTLINE",
+        "DISPLAY_NAME": "Primary (Outline)",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "btn-outline-primary",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_SECONDARY",
+        "DISPLAY_NAME": "Secondary",
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "btn-secondary",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_SECONDARY_OUTLINE",
+        "DISPLAY_NAME": "Secondary (Outline)",
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "btn-outline-secondary",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_SUCCESS",
+        "DISPLAY_NAME": "Success",
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "btn-success",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_SUCCESS_OUTLINE",
+        "DISPLAY_NAME": "Success (Outline)",
+        "DISPLAY_SEQUENCE": 6,
+        "CSS_CLASSES": "btn-outline-success",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_DANGER",
+        "DISPLAY_NAME": "Danger",
+        "DISPLAY_SEQUENCE": 7,
+        "CSS_CLASSES": "btn-danger",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_DANGER_OUTLINE",
+        "DISPLAY_NAME": "Danger (Outline)",
+        "DISPLAY_SEQUENCE": 8,
+        "CSS_CLASSES": "btn-outline-danger",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_WARNING",
+        "DISPLAY_NAME": "Warning",
+        "DISPLAY_SEQUENCE": 9,
+        "CSS_CLASSES": "btn-warning",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_WARNING_OUTLINE",
+        "DISPLAY_NAME": "Warning (Outline)",
+        "DISPLAY_SEQUENCE": 10,
+        "CSS_CLASSES": "btn-outline-warning",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_INFO",
+        "DISPLAY_NAME": "Info",
+        "DISPLAY_SEQUENCE": 11,
+        "CSS_CLASSES": "btn-info",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_INFO_OUTLINE",
+        "DISPLAY_NAME": "Info (Outline)",
+        "DISPLAY_SEQUENCE": 12,
+        "CSS_CLASSES": "btn-outline-info",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_LIGHT",
+        "DISPLAY_NAME": "Light",
+        "DISPLAY_SEQUENCE": 13,
+        "CSS_CLASSES": "btn-light",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_LIGHT_OUTLINE",
+        "DISPLAY_NAME": "Light (Outline)",
+        "DISPLAY_SEQUENCE": 14,
+        "CSS_CLASSES": "btn-outline-light",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_DARK",
+        "DISPLAY_NAME": "Dark",
+        "DISPLAY_SEQUENCE": 15,
+        "CSS_CLASSES": "btn-dark",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_DARK_OUTLINE",
+        "DISPLAY_NAME": "Dark (Outline)",
+        "DISPLAY_SEQUENCE": 16,
+        "CSS_CLASSES": "btn-outline-dark",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_STYLE_LINK",
+        "DISPLAY_NAME": "Link",
+        "DISPLAY_SEQUENCE": 17,
+        "CSS_CLASSES": "btn-link",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_SIZE",
+    "DISPLAY_NAME": "Size",
+    "DISPLAY_SEQUENCE": 110,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "N",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_SIZE_LG",
+        "DISPLAY_NAME": "Large",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "btn-lg",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_SIZE_SM",
+        "DISPLAY_NAME": "Small",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "btn-sm",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_WIDTH",
+    "DISPLAY_NAME": "Width",
+    "DISPLAY_SEQUENCE": 120,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Auto",
+    "IS_ADVANCED": "N",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_WIDTH_BLOCK",
+        "DISPLAY_NAME": "Stretch",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "btn-block",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_MARGIN_TOP",
+    "DISPLAY_NAME": "Margin Top",
+    "DISPLAY_SEQUENCE": 900,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_MARGIN_TOP_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "mt-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_TOP_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "mt-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_TOP_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "mt-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_TOP_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "mt-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_TOP_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "mt-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_TOP_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "mt-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_MARGIN_BOTTOM",
+    "DISPLAY_NAME": "------ Bottom",
+    "DISPLAY_SEQUENCE": 901,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_MARGIN_BOTTOM_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "mb-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_BOTTOM_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "mb-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_BOTTOM_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "mb-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_BOTTOM_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "mb-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_BOTTOM_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "mb-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_BOTTOM_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "mb-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_MARGIN_LEFT",
+    "DISPLAY_NAME": "------ Left",
+    "DISPLAY_SEQUENCE": 902,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_MARGIN_LEFT_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "ml-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_LEFT_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "ml-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_LEFT_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "ml-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_LEFT_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "ml-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_LEFT_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "ml-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_LEFT_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "ml-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_MARGIN_RIGHT",
+    "DISPLAY_NAME": "------ Right",
+    "DISPLAY_SEQUENCE": 903,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_MARGIN_RIGHT_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "mr-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_RIGHT_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "mr-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_RIGHT_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "mr-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_RIGHT_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "mr-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_RIGHT_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "mr-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_MARGIN_RIGHT_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "mr-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_PADDING_TOP",
+    "DISPLAY_NAME": "Padding Top",
+    "DISPLAY_SEQUENCE": 910,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_PADDING_TOP_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "pt-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_TOP_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "pt-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_TOP_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "pt-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_TOP_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "pt-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_TOP_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "pt-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_TOP_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "pt-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_PADDING_BOTTOM",
+    "DISPLAY_NAME": "------ Bottom",
+    "DISPLAY_SEQUENCE": 911,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_PADDING_BOTTOM_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "pb-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_BOTTOM_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "pb-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_BOTTOM_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "pb-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_BOTTOM_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "pb-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_BOTTOM_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "pb-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_BOTTOM_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "pb-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_PADDING_LEFT",
+    "DISPLAY_NAME": "------ Left",
+    "DISPLAY_SEQUENCE": 912,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_PADDING_LEFT_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "pl-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_LEFT_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "pl-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_LEFT_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "pl-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_LEFT_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "pl-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_LEFT_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "pl-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_LEFT_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "pl-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "BUTTON_PADDING_RIGHT",
+    "DISPLAY_NAME": "------ Right",
+    "DISPLAY_SEQUENCE": 913,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_PADDING_RIGHT_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "pr-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_RIGHT_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "pr-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_RIGHT_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "pr-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_RIGHT_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "pr-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_RIGHT_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "pr-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "BUTTON_PADDING_RIGHT_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "pr-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  }
+]
 {{/TEMPLATE_OPTION_GROUPS}}
 {{#TEMPLATE_OPTIONS}}
 []
