--- a/src/scss/_ft_variables.scss
+++ b/src/scss/_ft_variables.scss
@@ -1,4 +1,5 @@
 @import "apex_variables/groups";
 @import "apex_variables/bootstrap";
+@import "apex_variables/buttons";
 @import "apex_variables/navbar";
 @import "apex_variables/footer";
