--- a/src/scss/apex_variables/_bootstrap.scss
+++ b/src/scss/apex_variables/_bootstrap.scss
@@ -164,7 +164,7 @@ $sizes: ();
 
 /*
 {
-  "var" : "$body-background-color",
+  "var" : "@body-background-color",
   "name" : "Body Background Color",
   "type" : "color",
   "group": "Body"
