--- a/src/scss/apex_variables/_footer.scss
+++ b/src/scss/apex_variables/_footer.scss
@@ -1,6 +1,6 @@
 /*
 {
-  "var" : "$footer-top-background-color",
+  "var" : "@footer-top-background-color",
   "name" : "Footer Top Background Color",
   "type" : "color",
   "group": "Footer"
@@ -10,7 +10,7 @@ $footer-top-background-color: $body-bg;
 
 /*
 {
-  "var" : "$footer-bottom-background-color",
+  "var" : "@footer-bottom-background-color",
   "name" : "Footer Bottom Background Color",
   "type" : "color",
   "group": "Footer"
