--- a/src/scss/apex_variables/_groups.scss
+++ b/src/scss/apex_variables/_groups.scss
@@ -13,6 +13,11 @@
       "sequence": 2
     },
     {
+      "name": "Buttons",
+      "common": true,
+      "sequence": 2
+    },
+    {
       "name": "Body",
       "common": true,
       "sequence": 3
