--- a/templates/Buttons/Text.hbs
+++ b/templates/Buttons/Text.hbs
@@ -1,10 +1,15 @@
 {{#TEMPLATE}}
 <button id="#BUTTON_ID#" type="button" class="ft-button btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#>
-  <span class="ft-button-label"><i class="#ICON_CSS_CLASSES#"></i>#LABEL#</span>
+  <span class="ft-button-label">#LABEL#</span>
 </button>
 
 {{/TEMPLATE}}
-{{#HOT_TEMPLATE}}{{/HOT_TEMPLATE}}
+{{#HOT_TEMPLATE}}
+<button id="#BUTTON_ID#" type="button" class="ft-button ft-button-hot btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#>
+  <span class="ft-button-label">#LABEL#</span>
+</button>
+
+{{/HOT_TEMPLATE}}
 
 {{#TEMPLATE_OPTION_GROUPS}}
 []
@@ -12,7 +17,7 @@
 {{#TEMPLATE_OPTIONS}}
 []
 {{/TEMPLATE_OPTIONS}}
-{{#DEFAULT_TEMPLATE_OPTIONS}}
-btn-primary
-{{/DEFAULT_TEMPLATE_OPTIONS}}
-{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}
+btn-outline-secondary
+{{/PRESET_TEMPLATE_OPTIONS}}
