--- a/templates/Buttons/Text.hbs
+++ b/templates/Buttons/Text.hbs
@@ -1,14 +1,12 @@
 {{#TEMPLATE}}
-<button id="#BUTTON_ID#" type="button" class="ft-button btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#>
-  <span class="ft-button-label">#LABEL#</span>
+<button id="#BUTTON_ID#" type="button" class="ft-btn btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#>
+  <span class="ft-btn-label">#LABEL#</span>
 </button>
-
 {{/TEMPLATE}}
 {{#HOT_TEMPLATE}}
-<button id="#BUTTON_ID#" type="button" class="ft-button ft-button-hot btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#>
-  <span class="ft-button-label">#LABEL#</span>
+<button id="#BUTTON_ID#" type="button" class="ft-btn ft-btn-hot btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#>
+  <span class="ft-btn-label">#LABEL#</span>
 </button>
-
 {{/HOT_TEMPLATE}}
 
 {{#TEMPLATE_OPTION_GROUPS}}
