--- a/templates/Buttons/~global.template.options.hbs
+++ b/templates/Buttons/~global.template.options.hbs
@@ -170,6 +170,37 @@
       }
     ]
   },
+	{
+    "NAME": "BUTTON_GROUP",
+    "DISPLAY_NAME": "Button Group",
+    "DISPLAY_SEQUENCE": 130,
+    "HELP_TEXT": "Enables you to group many buttons together into a group. You can use this option to specify where the button is within this set. Set the option to Default if this button is not part of a button set.",
+    "NULL_TEXT": "Default (No group)",
+    "IS_ADVANCED": "N",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "BUTTON_GROUP_FIRST",
+        "DISPLAY_NAME": "First Button",
+        "DISPLAY_SEQUENCE": 10,
+        "CSS_CLASSES": "ft-btn-group ft-btn-group-first",
+        "HELP_TEXT": "Use this for the first button inside a button group."
+      },
+      {
+        "NAME": "BUTTON_GROUP_INNER",
+        "DISPLAY_NAME": "Inner Button",
+        "DISPLAY_SEQUENCE": 20,
+        "CSS_CLASSES": "ft-btn-group ft-btn-group-inner",
+        "HELP_TEXT": "Use this for inner buttons inside a button group."
+      },
+      {
+        "NAME": "BUTTON_GROUP_LAST",
+        "DISPLAY_NAME": "Last Button",
+        "DISPLAY_SEQUENCE": 30,
+        "CSS_CLASSES": "ft-btn-group ft-btn-group-last",
+        "HELP_TEXT": "Use this for the last button inside a button group."
+      }
+    ]
+  },
   {
     "NAME": "BUTTON_MARGIN_TOP",
     "DISPLAY_NAME": "Margin Top",
