--- a/templates/Buttons/Icon.hbs
+++ b/templates/Buttons/Icon.hbs
@@ -1,14 +1,12 @@
 {{#TEMPLATE}}
-<button id="#BUTTON_ID#" type="button" class="ft-button btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES# title="#LABEL#" aria-label="#LABEL#">
+<button id="#BUTTON_ID#" type="button" class="ft-btn btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES# title="#LABEL#" aria-label="#LABEL#">
   <i class="#ICON_CSS_CLASSES#" aria-hidden="true"></i>
 </button>
-
 {{/TEMPLATE}}
 {{#HOT_TEMPLATE}}
-<button id="#BUTTON_ID#" type="button" class="ft-button ft-button-hot btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES# title="#LABEL#" aria-label="#LABEL#">
+<button id="#BUTTON_ID#" type="button" class="ft-btn ft-btn-hot btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES# title="#LABEL#" aria-label="#LABEL#">
   <i class="#ICON_CSS_CLASSES#" aria-hidden="true"></i>
 </button>
-
 {{/HOT_TEMPLATE}}
 
 {{#TEMPLATE_OPTION_GROUPS}}
