--- a/src/scss/apex_extends/_table.scss
+++ b/src/scss/apex_extends/_table.scss
@@ -1,7 +1,7 @@
-.ft-thead-light thead {
+.table.ft-thead-light thead {
 	@extend .thead-light;
 }
 
-.ft-thead-dark thead {
+.table.ft-thead-dark thead {
 	@extend .thead-dark;
 }
