--- a/templates/ReportGenericColumns/Standard.hbs
+++ b/templates/ReportGenericColumns/Standard.hbs
@@ -1,19 +1,16 @@
 {{#ROW_TEMPLATE_BEFORE_ROWS}}
-<div id="#REGION_STATIC_ID#-report" class="table-responsive" #REPORT_ATTRIBUTES#>
-<table class="report-pagination report-pagination-top" role="presentation">#TOP_PAGINATION#</table>
-<table class="table #COMPONENT_CSS_CLASSES#">
-<caption>#REGION_TITLE#</caption>
+<table class="t-Report-pagination t-Report-pagination--top" role="presentation">#TOP_PAGINATION#</table>
+<div class="table-responsive">
+<table id="#REGION_STATIC_ID#-report" class="table #COMPONENT_CSS_CLASSES#" summary="#REGION_TITLE#" #REPORT_ATTRIBUTES#>
 {{/ROW_TEMPLATE_BEFORE_ROWS}}
 
 {{#BEFORE_COLUMN_HEADING}}
 <thead>
-<tr>
 {{/BEFORE_COLUMN_HEADING}}
 {{#COLUMN_HEADING_TEMPLATE}}
-<th id="#COLUMN_HEADER_NAME#">#COLUMN_HEADER#</th>
+<th id="#COLUMN_HEADER_NAME#" class="" scope="col" #ALIGNMENT# #COLUMN_WIDTH#>#COLUMN_HEADER#</th>
 {{/COLUMN_HEADING_TEMPLATE}}
 {{#AFTER_COLUMN_HEADING}}
-</tr>
 </thead>
 <tbody>
 {{/AFTER_COLUMN_HEADING}}
@@ -23,7 +20,7 @@
 {{/ROW_TEMPLATE_BEFORE_FIRST}}
 
 {{#ROW_TEMPLATE1}}
-<td headers="#COLUMN_HEADER_NAME#">#COLUMN_VALUE#</td>
+<td class="" #ALIGNMENT# headers="#COLUMN_HEADER_NAME#">#COLUMN_VALUE#</td>
 {{/ROW_TEMPLATE1}}
 {{#ROW_TEMPLATE_CONDITION1}}{{/ROW_TEMPLATE_CONDITION1}}
 {{#ROW_TEMPLATE_DISPLAY_COND1}}
@@ -51,42 +48,34 @@
 
 {{#ROW_TEMPLATE_AFTER_ROWS}}
 </tbody>
-<tfoot>
-<div class="report-links">#EXTERNAL_LINK##CSV_LINK#</div>
-</tfoot>
 </table>
-<nav><ul class="pagination">#PAGINATION#</ul></nav>
 </div>
+<div class="t-Report-links">#EXTERNAL_LINK##CSV_LINK#</div>
+<table class="t-Report-pagination t-Report-pagination--bottom" role="presentation">#PAGINATION#</table>
 {{/ROW_TEMPLATE_AFTER_ROWS}}
 
 {{#PAGINATION_TEMPLATE}}
-<li class="page-item">#TEXT#</li>
+<span class="t-Report-paginationText">#TEXT#</span>
 {{/PAGINATION_TEMPLATE}}
 {{#NEXT_PAGE_TEMPLATE}}
-<li class="page-item">
-	<a class="page-link" href="#LINK#" aria-label="Next">
-		<span aria-hidden="true">&raquo;</span>
-		<span class="sr-only">Next</span>
-	</a>
-</li>
+<a href="#LINK#" class="t-Button t-Button--small t-Button--noUI t-Report-paginationLink t-Report-paginationLink--next">
+  #PAGINATION_NEXT#<span class="a-Icon icon-right-arrow"></span>
+</a>
 {{/NEXT_PAGE_TEMPLATE}}
 {{#PREVIOUS_PAGE_TEMPLATE}}
-<li class="page-item">
-	<a class="page-link" href="#LINK#" aria-label="Previous">
-		<span aria-hidden="true">&laquo;</span>
-		<span class="sr-only">Previous</span>
-	</a>
-</li>
+<a href="#LINK#" class="t-Button t-Button--small t-Button--noUI t-Report-paginationLink t-Report-paginationLink--prev">
+  <span class="a-Icon icon-left-arrow"></span>#PAGINATION_PREVIOUS#
+</a>
 {{/PREVIOUS_PAGE_TEMPLATE}}
 {{#NEXT_SET_TEMPLATE}}
-<li class="page-item">
-	<a class="page-link" href="#LINK#" aria-label="Next">#PAGINATION_NEXT_SET#</a>
-</li>
+<a href="#LINK#" class="t-Button t-Button--small t-Button--noUI t-Report-paginationLink t-Report-paginationLink--next">
+  #PAGINATION_NEXT_SET#<span class="a-Icon icon-right-arrow"></span>
+</a>
 {{/NEXT_SET_TEMPLATE}}
 {{#PREVIOUS_SET_TEMPLATE}}
-<li class="page-item">
-	<a class="page-link" href="#LINK#" aria-label="Next">#PAGINATION_PREVIOUS_SET#</a>
-</li>
+<a href="#LINK#" class="t-Button t-Button--small t-Button--noUI t-Report-paginationLink t-Report-paginationLink--prev">
+  <span class="a-Icon icon-left-arrow"></span>#PAGINATION_PREVIOUS_SET#
+</a>
 {{/PREVIOUS_SET_TEMPLATE}}
 
 {{#TEMPLATE_OPTION_GROUPS}}
@@ -96,7 +85,7 @@
     "DISPLAY_NAME": "Table Style",
     "DISPLAY_SEQUENCE": 1,
     "HELP_TEXT": "",
-    "NULL_TEXT": "Light",
+    "NULL_TEXT": "Light (default)",
     "IS_ADVANCED": "N",
     "TEMPLATE_OPTIONS": [
       {
@@ -148,6 +137,30 @@
         "HELP_TEXT": ""
       }
     ]
+  },
+  {
+    "NAME": "REPORT_BORDER_STYLE",
+    "DISPLAY_NAME": "Border Style",
+    "DISPLAY_SEQUENCE": 4,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Horizontal Only (default)",
+    "IS_ADVANCED": "N",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "REPORT_BORDER_STYLE_ALL",
+        "DISPLAY_NAME": "All",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "table-bordered",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REPORT_BORDER_STYLE_NONE",
+        "DISPLAY_NAME": "Borderless",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "table-borderless",
+        "HELP_TEXT": ""
+      }
+    ]
   }
 ]
 {{/TEMPLATE_OPTION_GROUPS}}
@@ -158,14 +171,6 @@
     "DISPLAY_NAME": "Table Striped",
     "DISPLAY_SEQUENCE": 1,
     "CSS_CLASSES": "table-striped",
-    "HELP_TEXT": "",
-    "IS_ADVANCED": ""
-  },
-  {
-    "NAME": "TABLE_BORDERED",
-    "DISPLAY_NAME": "Table Bordered",
-    "DISPLAY_SEQUENCE": 2,
-    "CSS_CLASSES": "table-bordered",
     "HELP_TEXT": "",
     "IS_ADVANCED": ""
   },
