enhancement navbar togglers

--- a/src/scss/apex_components/_page_templates.scss
+++ b/src/scss/apex_components/_page_templates.scss
@@ -14,7 +14,7 @@
 	}
 }
 
-@include media-breakpoint-up(lg) {
+@include media-breakpoint-up(md) {
 	.ft-main-left-toggle {
 		margin-right: 0.5rem;
 	}
