--- a/templates/Pages/Left and Right Side Columns.hbs
+++ b/templates/Pages/Left and Right Side Columns.hbs
@@ -30,14 +30,14 @@ ft.theme.ready();
 
 <header class="ft-header">
   <nav class="ft-navbar navbar fixed-top d-flex flex-column flex-md-row border-bottom">
-    <button type="button" class="ft-main-left-toggle btn btn-light rounded-0 order-0" data-toggle="ft-main-left">
+    <button type="button" class="ft-main-left-toggle btn btn-light rounded-0 order-0" data-toggle="ft-main-left" title="#EXPAND_COLLAPSE_NAV_LABEL#">
       <span class="fa fa-layout-nav-left" aria-hidden="true"></span>
     </button>
     #TOP_GLOBAL_NAVIGATION_LIST#
 		<a class="navbar-brand order-1 order-lg-0" href="#HOME_LINK#">#LOGO#</a>
     <nav class="navbar-expand flex-row d-flex ml-md-auto order-3 order-lg-2">
       #NAVIGATION_BAR#
-	    <button type="button" class="ft-main-right-toggle btn btn-light rounded-0 order-4" data-toggle="ft-main-right">
+	    <button type="button" class="ft-main-right-toggle btn btn-light rounded-0 order-4" data-toggle="ft-main-right" title="#EXPAND_COLLAPSE_NAV_LABEL#">
 	      <span class="fa fa-layout-nav-right" aria-hidden="true"></span>
 	    </button>
     </nav>
